--- a/util/Makefile
+++ b/util/Makefile
@@ -1,5 +1,5 @@
-mapMaker: main.c point.c point.h
-	gcc -o mapMaker main.c point.c -g
+mapMaker: main.c point.c rectangle.c
+	gcc -o mapMaker main.c point.c rectangle.c -g
 
 clean:
 	rm -f mapMaker
