--- a/util/mapMaker.dSYM/Contents/Resources/Relocations/aarch64/mapMaker.yml
+++ b/util/mapMaker.dSYM/Contents/Resources/Relocations/aarch64/mapMaker.yml
@@ -2,9 +2,15 @@
 triple:          'arm64-apple-darwin'
 binary-path:     mapMaker
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003ED4, symSize: 0x40 }
-  - { offsetInCU: 0x33, offset: 0x33, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003ED4, symSize: 0x40 }
-  - { offsetInCU: 0x26, offset: 0xA9, size: 0x8, addend: 0x0, symName: _createPoint, symObjAddr: 0x0, symBinAddr: 0x100003F14, symSize: 0x28 }
-  - { offsetInCU: 0x41, offset: 0xC4, size: 0x8, addend: 0x0, symName: _createPoint, symObjAddr: 0x0, symBinAddr: 0x100003F14, symSize: 0x28 }
-  - { offsetInCU: 0x85, offset: 0x108, size: 0x8, addend: 0x0, symName: _printDebug, symObjAddr: 0x28, symBinAddr: 0x100003F3C, symSize: 0x44 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003C64, symSize: 0x40 }
+  - { offsetInCU: 0x33, offset: 0x33, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003C64, symSize: 0x40 }
+  - { offsetInCU: 0x26, offset: 0xB0, size: 0x8, addend: 0x0, symName: _createPoint, symObjAddr: 0x0, symBinAddr: 0x100003CA4, symSize: 0x28 }
+  - { offsetInCU: 0x41, offset: 0xCB, size: 0x8, addend: 0x0, symName: _createPoint, symObjAddr: 0x0, symBinAddr: 0x100003CA4, symSize: 0x28 }
+  - { offsetInCU: 0x85, offset: 0x10F, size: 0x8, addend: 0x0, symName: _printDebug, symObjAddr: 0x28, symBinAddr: 0x100003CCC, symSize: 0x44 }
+  - { offsetInCU: 0x26, offset: 0x188, size: 0x8, addend: 0x0, symName: _createRectangle, symObjAddr: 0x0, symBinAddr: 0x100003D10, symSize: 0x44 }
+  - { offsetInCU: 0x33, offset: 0x195, size: 0x8, addend: 0x0, symName: _createRectangle, symObjAddr: 0x0, symBinAddr: 0x100003D10, symSize: 0x44 }
+  - { offsetInCU: 0x85, offset: 0x1E7, size: 0x8, addend: 0x0, symName: _createRectangleFromPoint, symObjAddr: 0x44, symBinAddr: 0x100003D54, symSize: 0x48 }
+  - { offsetInCU: 0xD7, offset: 0x239, size: 0x8, addend: 0x0, symName: _rectangleContainsPoint, symObjAddr: 0x8C, symBinAddr: 0x100003D9C, symSize: 0x38 }
+  - { offsetInCU: 0x10D, offset: 0x26F, size: 0x8, addend: 0x0, symName: _rectangleContainsCord, symObjAddr: 0xC4, symBinAddr: 0x100003DD4, symSize: 0xB8 }
+  - { offsetInCU: 0x151, offset: 0x2B3, size: 0x8, addend: 0x0, symName: _rectangleIntersectsRectangle, symObjAddr: 0x17C, symBinAddr: 0x100003E8C, symSize: 0xE4 }
 ...
