--- a/brundy_bridger.assignment-02/Makefile
+++ b/brundy_bridger.assignment-02/Makefile
@@ -4,13 +4,17 @@ CFLAGS = -g -Wall -I$(GAMEOBJECTS_DIR) -I$(UTIL_DIR)
 #file stuff
 UTIL_DIR = util
 GAMEOBJECTS_DIR = gameObjects
+
 SRC = gameScreen.c \
-      $(UTIL_DIR)/point.c $(UTIL_DIR)/rectangle.c \
-      $(GAMEOBJECTS_DIR)/dungeon.c $(GAMEOBJECTS_DIR)/tile.c
+      $(UTIL_DIR)/point.c \
+      $(UTIL_DIR)/rectangle.c \
+      $(UTIL_DIR)/fileHandle.c \
+      $(GAMEOBJECTS_DIR)/dungeon.c \
+      $(GAMEOBJECTS_DIR)/tile.c
 
 # Other
 OBJ = $(SRC:.c=.o)
-TARGET = assignment01
+TARGET = assignment02
 
 # first rule
 $(TARGET): $(OBJ)
