added ncurses simple ui need to add monsters again...

--- a/brundy_bridger.assignment-04/Makefile
+++ b/brundy_bridger.assignment-04/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -g -Wall -I$(GAMEOBJECTS_DIR) -I$(UTIL_DIR)
 
-#file stuff
+# File directories
 UTIL_DIR = util
 GAMEOBJECTS_DIR = gameObjects
 
@@ -9,20 +9,18 @@ SRC = gameScreen.c \
       $(UTIL_DIR)/point.c \
       $(UTIL_DIR)/rectangle.c \
       $(UTIL_DIR)/fileHandle.c \
-	  $(UTIL_DIR)/heap.c \
+      $(UTIL_DIR)/heap.c \
+      $(UTIL_DIR)/ui.c \
       $(GAMEOBJECTS_DIR)/dungeon.c \
       $(GAMEOBJECTS_DIR)/tile.c \
       $(GAMEOBJECTS_DIR)/simulate.c \
-      $(GAMEOBJECTS_DIR)/npc.c \
-	  
+      $(GAMEOBJECTS_DIR)/npc.c
 
-# Other
 OBJ = $(SRC:.c=.o)
 TARGET = assignment04
 
-# rule
 $(TARGET): $(OBJ)
-	$(CC) $(CFLAGS) -o $(TARGET) $(OBJ) -lm
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJ) -lncurses -lm
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
