--- a/brundy_bridger.assignment-06/Makefile
+++ b/brundy_bridger.assignment-06/Makefile
@@ -5,12 +5,13 @@ CFLAGS = -g -Wall -I$(GAMEOBJECTS_DIR) -I$(UTIL_DIR)
 UTIL_DIR = util
 GAMEOBJECTS_DIR = gameObjects
 
-SRC = gameScreen.cpp \
+SRC = monsterMain.cpp \
       $(UTIL_DIR)/point.cpp \
       $(UTIL_DIR)/rectangle.cpp \
       $(UTIL_DIR)/fileHandle.cpp \
       $(UTIL_DIR)/heap.cpp \
       $(UTIL_DIR)/ui.cpp \
+      $(UTIL_DIR)/monsterParser.cpp \
       $(GAMEOBJECTS_DIR)/dungeon.cpp \
       $(GAMEOBJECTS_DIR)/tile.cpp \
       $(GAMEOBJECTS_DIR)/simulate.cpp \
